Modernize SetCommunityHandler
Change-Id: I1b83b81800f3d08721c3f6eaa69ea1507180d92d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>